@@ -378,7 +378,8 @@ enum MolochRotate {
 #define MOLOCH_FIELD_EXSPECIAL_DATABYTES_SRC    (MOLOCH_FIELDS_CNT_MAX+13)
 #define MOLOCH_FIELD_EXSPECIAL_DATABYTES_DST    (MOLOCH_FIELDS_CNT_MAX+14)
 #define MOLOCH_FIELD_EXSPECIAL_COMMUNITYID      (MOLOCH_FIELDS_CNT_MAX+15)
-#define MOLOCH_FIELDS_MAX                       (MOLOCH_FIELDS_CNT_MAX+16)
+#define MOLOCH_FIELD_EXSPECIAL_DST_IP_PORT      (MOLOCH_FIELDS_CNT_MAX+16)
+#define MOLOCH_FIELDS_MAX                       (MOLOCH_FIELDS_CNT_MAX+17)
 
 typedef struct moloch_config {
     gboolean  quitting;
